--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "axios": "^0.19.0",
     "history": "^4.9.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-redux": "^6.0.1",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.0.1",
+    "react-scripts": "3.2.0",
+    "react-widgets": "^4.4.11",
+    "react-widgets-moment": "^4.0.27",
     "redux": "^4.0.1",
     "redux-form": "^8.2.4",
     "redux-saga": "^1.0.2"
