--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,17 @@
     "@babel/preset-env": "^7.7.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "multer": "^1.4.2",
+    "path": "^0.12.7",
+    "pg": "^7.14.0",
+    "sequelize": "^5.21.2",
+    "sequelize-cli": "^5.5.1",
+    "yup": "^0.27.0"
   }
 }
