--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-polyfill": "^6.26.0",
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
-    "@babel/node": "^7.7.0",
-    "@babel/preset-env": "^7.7.1"
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.5",
+    "babel-polyfill": "^6.26.0"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -21,11 +21,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
+    "moment": "^2.29.0",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
     "path": "^0.12.7",
     "pg": "^7.18.2",
-    "sequelize": "^5.21.2",
+    "sequelize": "^5.22.3",
     "sequelize-cli": "^5.5.1",
     "yup": "^0.27.0"
   }
